--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "calculator",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,6 +18,8 @@
     "@vue/cli-plugin-typescript": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.1",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
